tools/rust-parser/tests/fixtures/positive/object-system.tree
\object[self]{[render]{\p{Body}} [raw]\verbEND|literalEND}
\patch{\object{[render]{base}}}[self][super]{[render]{override}}
\call{\ref{alpha/beta}}{render html}
