tools/rust-parser/tests/fixtures/negative/header-binders-patch-arity.tree
\patch{\get\base}(self, super, extra){[render]{}}
